# cpu-riscv64-pipeline

./: .gitignore  CMakeLists.txt  README.md
examples/: Makefile  test.c
include/: elf64_parser.h
src/: core.sv  core_logic.sv  defines.sv  reg_file.sv  tb_core.cpp
src/alu/: CMakeLists.txt  alu.sv  tb_alu.cpp
src/decoder/: CMakeLists.txt  decoder.sv  tb_decoder.cpp
src/hazard_unit/: hazard_unit.sv
src/latch/: latch.sv
src/memory/: CMakeLists.txt  memory.sv  tb_memory.cpp
src/pc/: pc.sv
src/reg_file/: CMakeLists.txt  reg_file.sv  tb_reg_file.cpp
